--- a/app/scss/_cta.scss
+++ b/app/scss/_cta.scss
@@ -1,23 +1,22 @@
 .cta {
   display: flex;
-  height: 110px;
+  height: 80px;
 }
 
 .cta-text {
   background: #27212c;
   flex: 1;
-  padding-left: 2rem;
   color: #9282a0;
   font-size: .8rem;
   letter-spacing: .8px;
   align-items: center;
   display: flex;
+  padding-left: 40px;
 }
 
 .cta-arrow {
   background: #bc3183;
-  //flex-basis: 30%;
-  width: 100px;
+  width: 80px;
   height: auto;
   display: flex;
   align-items: center;
@@ -29,22 +28,25 @@
 @media screen and (min-width: 640px) {
 
   .cta {
-    height: 180px;
+    height: 150px;
   }
   .cta-text p {
     font-size: 1.4rem;
   }
   .cta-arrow {
-    width: 180px;
+    width: 150px;
   }
 }
 
 @media screen and (min-width: 980px) {
 
   .cta {
-    height: 120px;
+    height: 235px;
   }
   .cta-text p {
     font-size: 1.8rem;
+  }
+  .cta-arrow {
+    width: 235px;
   }
 }
