--- a/app/scss/_portfolio.scss
+++ b/app/scss/_portfolio.scss
@@ -2,21 +2,24 @@
   display: flex;
   flex-direction: column;
 
-  .port-1 {
-    display: flex;
-    height: 420px;
-    background-color: #5b0fa1;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .port-2 img {
-    width: 100%;
-    display: block;
-  }
-
-  .port-3 img {
+  img {
     width: 100%;
     display: block;
   }
 }
+
+// ---- 980 up -----
+
+@media screen and (min-width: 980px) {
+
+  .portfolio {
+    flex-direction: row;
+
+    img {
+      display: block;
+      flex: 33.33%;
+    }
+  }
+}
+
+// ---- End 980 ----
