Cleaning up a bit

--- a/app/scss/_banner.scss
+++ b/app/scss/_banner.scss
@@ -34,7 +34,7 @@
 
   .banner {
 
-    padding: 6.5em 0;
+    padding: 5em 0;
 
     h1 {
       font-size: 2.4rem;
@@ -50,7 +50,18 @@
 
   .banner {
     min-height: 550px;
+    padding: 0;
+    h1 {
+      font-size: 4rem;
+    }
+  }
+}
 
+@media screen and (min-width: 1024px) {
+
+  .banner {
+    min-height: 580px;
+    padding: .2em;
     h1 {
       font-size: 4rem;
     }
