--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -512,7 +512,7 @@ a {
 
 @media screen and (min-width: 640px) {
   .banner {
-    padding: 6.5em 0; }
+    padding: 5em 0; }
     .banner h1 {
       font-size: 2.4rem; }
     .banner a {
@@ -520,7 +520,15 @@ a {
 
 @media screen and (min-width: 980px) {
   .banner {
-    min-height: 550px; }
+    min-height: 550px;
+    padding: 0; }
+    .banner h1 {
+      font-size: 4rem; } }
+
+@media screen and (min-width: 1024px) {
+  .banner {
+    min-height: 580px;
+    padding: .2em; }
     .banner h1 {
       font-size: 4rem; } }
 
