--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -407,7 +407,6 @@ template {
 body {
   font-family: 'Montserrat', sans-serif;
   color: #fff;
-  font-family: 'Montserrat', sans-serif;
   letter-spacing: 1.2px; }
 
 .wrapper {
@@ -426,7 +425,7 @@ a {
     justify-content: space-between;
     align-items: center; }
     .navbar .heading .nav-logo {
-      margin-left: 30px; }
+      margin-left: 10%; }
       .navbar .heading .nav-logo:hover {
         color: #ccc; }
     .navbar .heading #nav-menu-button {
@@ -477,7 +476,7 @@ a {
       flex-direction: row-reverse;
       justify-content: flex-start;
       align-items: center;
-      margin-left: 100px; }
+      margin-left: 10%; }
       .navbar .nav .nav-ul li .nav-link {
         padding: 0 1em;
         font-size: 1.2rem;
@@ -508,7 +507,7 @@ a {
 .row-across {
   display: flex;
   justify-content: space-between;
-  width: 70%; }
+  padding-right: 10%; }
 
 @media screen and (min-width: 640px) {
   .banner {
@@ -530,7 +529,9 @@ a {
     min-height: 580px;
     padding: .2em; }
     .banner h1 {
-      font-size: 4rem; } }
+      font-size: 4rem; }
+  .row-across {
+    max-width: 50%; } }
 
 .cta {
   display: flex;
@@ -540,11 +541,12 @@ a {
   background: #27212c;
   flex: 1;
   color: #9282a0;
-  font-size: .8rem;
+  font-size: .7rem;
   letter-spacing: .8px;
   align-items: center;
+  justify-content: flex-start;
   display: flex;
-  padding-left: 40px; }
+  padding-left: 11%; }
 
 .cta-arrow {
   background: #bc3183;
@@ -559,18 +561,26 @@ a {
 @media screen and (min-width: 640px) {
   .cta {
     height: 150px; }
-  .cta-text p {
-    font-size: 1.4rem; }
+  .cta-text {
+    font-size: 1.2rem; }
   .cta-arrow {
     width: 150px; } }
 
 @media screen and (min-width: 980px) {
   .cta {
     height: 235px; }
-  .cta-text p {
+  .cta-text {
     font-size: 1.8rem; }
   .cta-arrow {
     width: 235px; } }
+
+@media screen and (min-width: 1024px) {
+  .cta {
+    height: 250px; }
+  .cta-text {
+    font-size: 1.9rem; }
+  .cta-arrow {
+    width: 250px; } }
 
 .portfolio {
   display: flex;
