--- a/app/scss/_cta.scss
+++ b/app/scss/_cta.scss
@@ -7,11 +7,12 @@
   background: #27212c;
   flex: 1;
   color: #9282a0;
-  font-size: .8rem;
+  font-size: .7rem;
   letter-spacing: .8px;
   align-items: center;
+  justify-content: flex-start;
   display: flex;
-  padding-left: 40px;
+  padding-left: 11%;
 }
 
 .cta-arrow {
@@ -30,8 +31,8 @@
   .cta {
     height: 150px;
   }
-  .cta-text p {
-    font-size: 1.4rem;
+  .cta-text {
+    font-size: 1.2rem;
   }
   .cta-arrow {
     width: 150px;
@@ -43,10 +44,23 @@
   .cta {
     height: 235px;
   }
-  .cta-text p {
+  .cta-text {
     font-size: 1.8rem;
   }
   .cta-arrow {
     width: 235px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+
+  .cta {
+    height: 250px;
+  }
+  .cta-text {
+    font-size: 1.9rem;
+  }
+  .cta-arrow {
+    width: 250px;
   }
 }
