--- a/app/scss/_navigation.scss
+++ b/app/scss/_navigation.scss
@@ -17,7 +17,7 @@ a {
     align-items: center;
 
     .nav-logo {
-      margin-left: 30px;
+      margin-left: 10%;
 
       &:hover {
         color: #ccc;
@@ -111,7 +111,7 @@ a {
         flex-direction: row-reverse;
         justify-content: flex-start;
         align-items: center;
-        margin-left: 100px;
+        margin-left: 10%;
         li {
 
           .nav-link {
