--- a/app/scss/_banner.scss
+++ b/app/scss/_banner.scss
@@ -30,6 +30,14 @@
   padding-right: 10%;
 }
 
+.chevron a {
+  color: #fff;
+
+  &:hover {
+    color: #ccc;
+  }
+}
+
 @media screen and (min-width: 640px) {
 
   .banner {
