--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -406,8 +406,7 @@ template {
 
 body {
   font-family: 'Montserrat', sans-serif;
-  color: #fff;
-  letter-spacing: 1.2px; }
+  color: #fff; }
 
 .wrapper {
   margin: 0 10vw;
@@ -509,6 +508,11 @@ a {
   justify-content: space-between;
   padding-right: 10%; }
 
+.chevron a {
+  color: #fff; }
+  .chevron a:hover {
+    color: #ccc; }
+
 @media screen and (min-width: 640px) {
   .banner {
     padding: 5em 0; }
@@ -557,6 +561,8 @@ a {
   justify-content: center;
   font-size: 1.2rem;
   display: flex; }
+  .cta-arrow a:hover {
+    color: #ccc; }
 
 @media screen and (min-width: 640px) {
   .cta {
