--- a/app/scss/_cta.scss
+++ b/app/scss/_cta.scss
@@ -24,6 +24,12 @@
   justify-content: center;
   font-size: 1.2rem;
   display: flex;
+
+  a {
+    &:hover {
+      color: #ccc;
+    }
+  }
 }
 
 @media screen and (min-width: 640px) {
