Fixed responsive and validated HTML/CSS

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -506,12 +506,20 @@ a {
 .row-across {
   display: flex;
   justify-content: space-between;
-  padding-right: 10%; }
+  padding-right: 20%; }
 
 .chevron a {
   color: #fff; }
   .chevron a:hover {
     color: #ccc; }
+
+@media screen and (min-width: 400px) {
+  .row-across {
+    padding-right: 30%; } }
+
+@media screen and (min-width: 500px) {
+  .row-across {
+    padding-right: 40%; } }
 
 @media screen and (min-width: 640px) {
   .banner {
@@ -533,9 +541,7 @@ a {
     min-height: 580px;
     padding: .2em; }
     .banner h1 {
-      font-size: 4rem; }
-  .row-across {
-    max-width: 50%; } }
+      font-size: 4rem; } }
 
 .cta {
   display: flex;
