--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -446,7 +446,8 @@ a {
     list-style: none;
     text-align: center;
     margin: 0;
-    padding: 0; }
+    padding: 0;
+    overflow: hidden; }
     .navbar .nav .nav-ul li .nav-link {
       width: 100%;
       display: block;
